Pluginista: Fix button in nav links not being vertically aligned with links

--- a/apps/pluginista/assets/css/_header.scss
+++ b/apps/pluginista/assets/css/_header.scss
@@ -27,6 +27,7 @@ nav {
 		list-style-type: none;
 		margin: 0;
 		padding-left: 0;
+		align-items: center;
 	}
 	li {
 		font-family: variables.$display_font_family;
